# efficient-theorem-proving

./: .gitignore  PROTOCOL_V2.md  README.md  compute_token_metrics.py  create_hard_subset.py  eval_with_output_saving.py  evaluate_pruning_thresholds.py  export_pruned_percentile_datasets.py  lean_pruning_pipeline.py  prepare_dpo_dataset.py  prepare_training_dataset.py  protocol_config.py  pruning_common.py  pyproject.toml  run_dpo_overnight.sh  run_full_sft_sweep_with_checkpoint_eval.sh  run_lean_pruning.py  train_dpo.py  train_sft.py
utils/: eval_output_metrics.py  rebuild_all_outputs.py
