[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "efficient-theorem-proving"
version = "0.1.0"
description = "Lean theorem-proving pruning pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "tqdm>=4.65.0",
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "vllm>=0.5.0",
  "kimina-client>=0.1.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[tool.uv]
package = false
